feat: Landing page modernizada, CI/CD completo e notificações
- Redesign da landing page com design moderno e tecnológico
- CSS responsivo com gradientes e animações suaves
- Deploy.yml implementado para CD automático no GitHub Pages
- CI.yml melhorado com notificações de sucesso/falha
- README.md atualizado com badges de status
- Documentação de entrega criada
- Matrix Strategy configurado para Node.js 18 e 20
- Permissões do GitHub Pages configuradas

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,16 @@ jobs:
       - name: Validar links e imagens
         run: |
           blc index.html --recursive --filter-level=3
+
+      - name: Notificar sucesso na validação
+        if: success()
+        run: |
+          echo "✅ Todas as validações passaram com sucesso!"
+          echo "Node.js version: ${{ matrix.node-version }}"
+
+      - name: Notificar falha na validação
+        if: failure()
+        run: |
+          echo "❌ A validação falhou!"
+          echo "Por favor, corrija os erros acima antes de fazer o merge."
+          exit 1
